[package]
name = "spacegame"
version = "0.1.0"
edition = "2021"
authors = ["Zach Grow"]

[dependencies]
crossterm = "0.25.0"
tui = "0.19.0"
#bracket-lib = "0.8.7"
bracket-rex = { version = "0.8.7", default-features = false } # REXPaint tools
bracket-algorithm-traits = { version = "0.8.7", default-features = false } # required for other bracket-lib crates
bracket-geometry = { version = "0.8.7", default-features = false } # provides a few geometric primitives and helpers, required for others
#bracket-random = { version = "0.8.7", default-features = false }
#bracket-noise = {} # noise generation tools
#bracket-pathfinding = { version = "0.8.7", default-features = false } # high-perf A* pathfinding and Djikstra maps
#bracket-random = {} # RNG and dice string parsing
#bracket-rex = { version = "0.8.7", default-features = false } # REXPaint tools
bracket-embedding = { version = "0.8.7", default-features = false } # resource embedding tools for WebGL apps
# versions of cursive above this require crate 'time' to be v3+, which requires rustc v1.63+
#cursive = { version = "0.16.3" }
#serde = { version = "1.0.93", features = ["derive"] }
#serde_json = "1.0.39"
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
