[package]
name = "spacegame"
version = "0.2.0"
edition = "2021"
authors = ["Zach Grow"]

[dependencies]
# Disabling the defaults removes the rendering/windowing code from Bevy
# Note also the use of MinimalPlugins in the main() method
bevy = { version = "0.11.0", default-features = false }
crossterm = "0.26"
ratatui = "0.22.0"
tui-textarea = { git = "https://github.com/delehef/tui-textarea", version = "*", features = ["ratatui-crossterm"], default-features = false }
bevy_save = "0.9.0"
bevy_turborand = "0.6.0"
bracket-algorithm-traits = { version = "0.8.7", default-features = false } # required for other bracket-lib crates
bracket-embedding = { version = "0.8.7", default-features = false } # resource embedding tools for WebGL apps
bracket-geometry = { version = "0.8.7", default-features = false } # provides a few geometric primitives and helpers, required for others
bracket-pathfinding = { version = "0.8.7", default-features = false } # high-perf A* pathfinding and Djikstra maps
bracket-rex = { version = "0.8.7", default-features = false } # REXPaint tools
codepage-437 = "0.1.0"
strum = "0.25.0"
strum_macros = "0.25.1"
log = "0.4"
simplelog = { version = "0.12.1", features = ["paris"] }
serde_json = "1.0.107"
serde = "1.0.188"
lazy_static = "1.4.0"

# EOF
